# redactable

./: .gitignore  LICENSE  README.md  action.yml  pyproject.toml
.github/workflows/: ci.yml  pages.yml
benchmarks/: README.md
benchmarks/ai4privacy/: benchmark.py  benchmark_contextual.py
corpus/: build_seed.py  seed.jsonl
docs/: AGENT-SETUP.md  INTEGRATIONS.md
docs/superpowers/specs/: 2026-06-02-redactable-design.md
hooks/: pre-commit-redact.sh  redactable-userpromptsubmit.py
integrations/opencode/: README.md  redactable-helper.py  redactable.js
src/redactable/: __init__.py  checksums.py  cli.py  mcp_server.py  overlap.py  policy.py  proxy.py  redactor.py  service.py  span.py  tokenization.py
src/redactable/detectors/: __init__.py  base.py  composite.py  deterministic.py  llm.py  ner.py
src/redactable/eval/: corpus.py  scorer.py
src/redactable/policies/: __init__.py  hipaa-safe-harbor.yaml  pii-structured.yaml
tests/: test_checksums.py  test_cli.py  test_composite.py  test_corpus.py  test_deterministic.py  test_llm.py  test_ner.py  test_policy.py  test_proxy.py  test_redactor.py  test_scorer.py  test_service.py  test_span.py  test_tokenization.py
web/: README.md  TODO.md  gemma.js  gliner.js  index.html  redactable.js
web/extension/: manifest.json  popup.html  popup.js  redactable.js
