[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "redactable"
version = "0.1.0"
description = "Deterministic-first PII/PHI de-identification you can prove: benchmarked recall, versioned jurisdiction policies, reversible tokenization, and a reproducible audit trail."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "The Redactable Authors" }]
keywords = [
    "pii", "phi", "redaction", "de-identification", "anonymization",
    "privacy", "hipaa", "gdpr", "ner", "data-governance", "compliance",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "PyYAML>=6.0",
]

[project.optional-dependencies]
# Encoder-NER contextual detector (open model, ONNX/CPU). Kept out of the core
# so the deterministic engine installs with zero heavy dependencies.
ner = [
    "gliner>=0.2.13",
    "onnxruntime>=1.17",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
redactable = "redactable.cli:main"

[project.urls]
Homepage = "https://github.com/redactable/redactable"
Repository = "https://github.com/redactable/redactable"
Issues = "https://github.com/redactable/redactable/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/redactable"]

[tool.hatch.build.targets.wheel.force-include]
"policies" = "redactable/policies"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
